Atualizar link de download para GitHub Releases

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -261,7 +261,7 @@
           <h2>Pronto para começar?</h2>
           <p>Baixe o TubNew gratuitamente e comece a salvar seus vídeos favoritos agora mesmo.</p>
           <div class="download-buttons">
-            <a href="/downloads/TubNew-Setup.exe" class="btn-download-main" download>
+            <a href="https://github.com/juliolopes-dev/TubNew/releases/download/v1.0.0/TubNew.Setup.1.0.0.exe" class="btn-download-main" download>
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <polyline points="7 10 12 15 17 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
